--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
-  "version": "1.1.3",
-  "author": "Austin Green",
+  "name": "asproductions-group",
+  "description": "Website for asproductions.group",
+  "version": "1.1.0",
+  "author": "Ari Stehney",
   "dependencies": {
     "bulma": "^0.9.0",
     "gatsby": "^2.20.35",
@@ -29,7 +29,9 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^6.0.0",
-    "uuid": "^7.0.0"
+    "three": "^0.125.2",
+    "uuid": "^7.0.0",
+    "vanta": "^0.5.21"
   },
   "keywords": [
     "gatsby"
